fix security, logic bugs, and improve UI robustness
Backend:
- Fix critical credit deduction bug: BidService now actually subtracts credits on bid placement
- Add pessimistic locking (PESSIMISTIC_WRITE) to auction item fetch in BidService to eliminate race condition on concurrent bids
- Catch JwtException in JwtAuthenticationFilter so malformed/expired tokens return 401 instead of 500
- Add UserResponse DTO to UserController so password hash is never sent to clients
- Add @Valid + jakarta validation annotations to ItemRequest and BidRequest DTOs
- Add auction timing validation in AuctionItemService (endTime > startTime, endTime in future)
- Add GET /items/my endpoint for sellers to fetch only their own listings
- Move JWT secret to JWT_SECRET env var; disable show-sql and H2 console by default
- Read CORS allowed origins from CORS_ALLOWED_ORIGINS env var (SecurityConfig)

Frontend:
- Store and clear role in localStorage on login, register, and logout
- Add allowedRole prop to ProtectedRoute to enforce role-based access (buyers blocked from /seller-dashboard and vice versa)
- Add 401 response interceptor to api.ts: clears token+role and redirects to /login on session expiry
- Fix WebSocket subscription memory leak: unsubscribe all topics on UserDashboard unmount
- Switch SellerDashboard to GET /items/my instead of fetching all items and filtering client-side
- Add loading states to Login, Register, UserDashboard, SellerDashboard; disable submit buttons during requests
- Add client-side endTime > startTime validation in SellerDashboard form
- Fix BidHistoryModal: show error state instead of infinite loading spinner on API failure

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>